--- a/app/demo.css
+++ b/app/demo.css
@@ -25,6 +25,14 @@
     font-size: 12px;
 }
 
+.toggle-button {
+    background-color: #ccc;
+  }
+
+  .toggle-button.active {
+    background-color: rgb(0, 234, 255);
+  }
+
 button {
     margin: 5px;
 }
